# lib/api-spec/openapi.yaml
@@ -681,7 +681,7 @@ components:
 
     Material:
       type: object
-      required: [id, name, code, createdAt]
+      required: [id, name, code, kategori, createdAt]
       properties:
         id:
           type: integer
@@ -691,6 +691,9 @@ components:
           type: string
         description:
           type: ["string", "null"]
+        kategori:
+          type: string
+          enum: [scan, non-scan]
         createdAt:
           type: string
 
@@ -704,6 +707,10 @@ components:
           type: string
         description:
           type: string
+        kategori:
+          type: string
+          enum: [scan, non-scan]
+          default: scan
 
     MaterialUpdate:
       type: object
@@ -714,6 +721,9 @@ components:
           type: string
         description:
           type: ["string", "null"]
+        kategori:
+          type: string
+          enum: [scan, non-scan]
 
     ScanIn:
       type: object
